scripts/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-node-server
  namespace: static-node-server
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: NodePort
  selector:
    app: static-node-server
