scripts/server/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-node-server
  namespace: static-node-server
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    # replace this with your website address
    - static-node-server.vikramtiwari.com
    secretName: static-node-server-tls
  rules:
  - host: static-node-server.vikramtiwari.com
    http:
      paths:
      - path: /
        backend:
          serviceName: static-node-server
          servicePort: 80
